--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         name: "Operational Research and Modeling",
         ECTS: 3,
         partials: [
-          { name: "Contrôle terminal", coef: 1.5 },
-          { name: "Évaluation en ligne", coef: 1.5 },
+          { name: "Contrôle terminal", coef: 1 },
+          { name: "Évaluation en ligne", coef: 1 },
+          { name: "Final", coef: 1 }
         ]
       },
       {
