--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
         name: "Network Services",
         ECTS: 3,
         partials: [
-          { name: "Contrôle terminal", coef: 1.5 },
-          { name: "Mini-projet", coef: 1.5 }
+          { name: "Contrôle terminal", coef: 1 },
+          { name: "Mini-projet", coef: 1 },
+          { name: "Report", coef: 1 }
         ]
       },
       {
